# symbolset

./: .gitignore  CMakeLists.txt  README.md  Rakefile
symbolset/: info.hpp  preprocessor.hpp  symbolset.hpp
test/: spec.cpp
test/preprocessor/: CMakeLists.txt  test.rb
test/spec/: info_spec.cpp  preprocessor_spec.cpp  symbolset_spec.cpp
